// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCard is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiCard euiCard--centerAligned testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--medium euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </span>
  <span
    class="euiCard__footer"
  />
</div>
`;

exports[`EuiCard props footer 1`] = `
<div
  class="euiCard euiCard--centerAligned"
>
  <span
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--medium euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </span>
  <span
    class="euiCard__footer"
  >
    <span>
      Footer
    </span>
  </span>
</div>
`;

exports[`EuiCard props horizontal 1`] = `
<div
  class="euiCard euiCard--centerAligned euiCard--horizontal"
>
  <span
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--medium euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </span>
</div>
`;

exports[`EuiCard props icon 1`] = `
<div
  class="euiCard euiCard--centerAligned euiCard--hasIcon"
>
  <span
    class="euiCard__top"
  >
    <svg
      class="euiIcon euiIcon--medium euiIcon--app myIconClass euiCard__icon"
      focusable="false"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="euiIcon__fillSecondary"
        d="M7 9v2H0V0h23v7h-2V2H2v7z"
      />
      <path
        d="M32 9v12H20c-6.075 0-11-4.925-11-11V9h23zm-20.945 2c.497 4.5 4.312 8 8.945 8h10v-8H11.055z"
      />
      <path
        class="euiIcon__fillSecondary"
        d="M30 23h2v9H19v-9h2v7h9z"
      />
    </svg>
  </span>
  <span
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--medium euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </span>
  <span
    class="euiCard__footer"
  />
</div>
`;

exports[`EuiCard props selectable 1`] = `
<div
  class="euiCard euiCard--centerAligned euiCard--isSelectable euiCard--isSelectable--text"
>
  <span
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--medium euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </span>
  <span
    class="euiCard__footer"
  />
  <button
    aria-describedby="generated-idTitle generated-idDescription"
    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiCardSelect euiCardSelect--text"
    type="button"
  >
    <span
      class="euiButtonEmpty__content"
    >
      <span
        class="euiButtonEmpty__text"
      >
        Select
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiCard props textAlign 1`] = `
<div
  class="euiCard euiCard--rightAligned"
>
  <span
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--medium euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </span>
  <span
    class="euiCard__footer"
  />
</div>
`;

exports[`EuiCard props titleElement 1`] = `
<div
  class="euiCard euiCard--centerAligned"
>
  <span
    class="euiCard__content"
  >
    <h4
      class="euiTitle euiTitle--medium euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </h4>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </span>
  <span
    class="euiCard__footer"
  />
</div>
`;
